# claude-in-k3s

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md  TASKS.md  build.rs
.interface-design/: system.md
crates/ck3-logging/: Cargo.toml
crates/ck3-logging/src/: lib.rs
docker/: Dockerfile.claude-overlay  Dockerfile.template  base-images.toml  entrypoint.sh
docs/plans/: 2026-03-02-auto-install-deps-design.md  2026-03-02-auto-install-deps.md  2026-03-02-completion-gaps-design.md  2026-03-02-completion-gaps-implementation.md  2026-03-02-comprehensive-test-suite.md  2026-03-02-ui-redesign-design.md  2026-03-02-ui-redesign-implementation.md  2026-03-03-resilience-design.md  2026-03-03-resilience-implementation.md
helm/claude-code/: Chart.yaml  values.yaml
helm/claude-code/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  role.yaml  (+2 more)
src/: app.rs  config.rs  deps.rs  docker.rs  error.rs  health.rs  helm.rs  kubectl.rs  lib.rs  lockfile.rs  main.rs  orchestrator.rs  platform.rs  progress.rs  projects.rs  recovery.rs  state.rs  terraform.rs  test_utils.rs  tray.rs
terraform/: k3s.tf  main.tf  outputs.tf  variables.tf
tests/: e2e_tests.rs  log_viewer_tests.rs  mock_bin.rs  requirements_tests.rs  slint_component_tests.rs  ui_tests.rs
ui/: app-window.slint  theme.slint
ui/components/: card.slint  cluster-panel.slint  data-row.slint  form-field.slint  icon-button.slint  log-viewer.slint  nav-item.slint  pods-panel.slint  projects-panel.slint  setup-panel.slint  status-badge.slint  toast.slint
