[package]
name = "claude-in-k3s"
version = "0.1.0"
edition = "2021"
description = "GUI application for managing Claude Code instances on K3s"
license = "MIT"
build = "build.rs"

[dependencies]
slint = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
i-slint-backend-testing = "=1.15.1"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
